# ros2-ai

./: .gitignore  README.md  todo.txt
aruco_poses/: CMakeLists.txt  package.xml
aruco_poses/include/aruco_poses/: aruco_posestimation.cpp
aruco_poses/src/: aruco_posestimation.cpp
input/: package.xml  setup.cfg  setup.py
input/input/: llm_text_input.py  motion_control.py  oak_input.py
llm_bringup/launch/: audio_in_text_out_demo.launch.py  chatgpt_with_arm_robot.launch.py  chatgpt_with_turtle_robot.launch.py  gpt_taskplanner.launch.py
llm_input/: setup.py
llm_input/llm_input/: llm_text_input_local.py  oak_input.py  oak_input_0.py  oak_input_1.py  oak_input_2.py
llm_install/: dependencies_install.sh
llm_model/: setup.py
llm_model/llm_model/: chatgpt.py  gpt.py
llm_output/llm_output/: llm_audio_output.py
llm_robot/: package.xml  setup.py
llm_robot/llm_robot/: arx5_arm_robot.py  multi_robot.py  turtle7.py
mr.cap/: CMakeLists.txt  package.xml
mr.cap/include/mrcap/: MainWindow.h  Optimizer.h  ROSCommunications.h  customFactor.h
mr.cap/include/mrcap/DataTypes/: OptimizationParams.h  RobotData.h
mr.cap/src/: CMakeLists.txt
mrcap/: CMakeLists.txt  package.xml
mrcap/include/mrcap/: FactorGraph.h  MainWindow.h  MotionModelArc.h  Optimizer.h  Optimizer_vlm.h  ROSCommunications.h  SDF.h  Trajectory.h  Utils.h  customFactor.h
mrcap/include/mrcap/DataTypes/: RobotData.h
msgs_interfaces/: CMakeLists.txt  package.xml
msgs_interfaces/msg/: MarkerPose.msg  MarkerPoseArray.msg
msgs_interfaces/srv/: ChatGPT.srv  GPT.srv
optimizer/: CMakeLists.txt  package.xml
optimizer/include/datatypes/: RobotData.h
optimizer/include/optimizer/: CustomFactor.h  FactorGraph.h  MotionModelArc.h  Optimizer.h  SDF.h  Trajectory.h  Utils.h
optimizer/include/ros2nodes/: ArucoPoseEstimation.h  ArucoPoseSubscriber.h  GTsamTrajPublisher.h  RealTrajPublisher.h  VLMService.h  VelocityPublisher.h
optimizer/src/: main.cpp  optimizer.cpp  ros_nodes.cpp
pose_estimation/: CMakeLists.txt  package.xml
pose_estimation/src/: ArucoPoseEstimation.cpp  aruco_pose_estimation.cpp
turtles_bringup/: package.xml  setup.cfg  setup.py
turtles_bringup/launch/: coloco_manipulation.launch.py  coloco_rosnodes.launch.py  move_turtle_robot.launch.py  move_turtlebots.launch.py  multitb_push.launch.py  perception_turtle_robot.launch.py  perception_turtlebots.launch.py  planning_withgpt.launch.py
turtles_bringup/launch/llmlaunch/: chatgpt_with_arm_robot.launch.py  chatgpt_with_multi_robot.launch.py  chatgpt_with_turtlebot.launch.py
turtles_bringup/launch/others/: arx5_with_turtlesim.py
vlm_model/: package.xml  setup.cfg  setup.py
vlm_model/vlm_model/: GPT_node.py  arx5_arm_robot.py  chatgpt.py  gpt.py  multi_robot.py  response_behavior.py  response_format.py  robot_behavior.py  turtle7.py
