<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>input</name>
  <version>0.0.1</version>
  <description>sensor input nodes for the ros2-ai</description>
  <maintainer email="nisarga.nilavadi@utn.de">Nisarga Nilavadi</maintainer>
  <license>TODO</license>

  <depend>llm_config</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
