<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>optimizer</name>
  <version>0.0.1</version>
  <description>ToDo</description>
  <maintainer email="nisarga.nilavadi@utn.de">Nisarga Nilavadi</maintainer>
  <license>ToDo</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>msgs_interfaces</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>pose_estimation</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
