<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vlm_model</name>
  <version>0.0.1</version>
  <description>ToDo</description>
  <maintainer email="nisarga.nilavadi@utn.de">Nisarga Nilavadi</maintainer>
  <license>ToDo</license>

  <depend>msgs_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
